# interpreter

./: .gitignore  README.md  config.py  finetune.py  interpreter.py  openai_api_pricing.yaml  pyproject.toml
interpreter/: __init__.py  finetune.py  main.py  model_comparison.py  openai_api_pricing.yaml  record_and_transcribe_using_openai_api.py  test.py  transcribe.py  whispercpp.py
